crates/sui-swarm-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/sui-swarm-config/tests/snapshot_tests.rs
expression: genesis.sui_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 140
system_state_version: 1
validators:
  total_stake: 20000000000000000
  active_validators:
    - metadata:
        sui_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0x9eed4cfe0919399e99a21054d7af59451cc9187fc2f9cd9de0ad77c51e77a4ec"
          size: 0
      voting_power: 10000
      operation_cap_id: "0x82e46b1b0ab0b0d8721632fa0fedeb5e8529a361a2f1645d88754eb8f63c4c74"
      gas_price: 1000
      staking_pool:
        id: "0xa176204a87f5ad772e1e397c5c5c09668445ff328732734a1f6249af8498ae3b"
        activation_epoch: 0
        deactivation_epoch: ~
        sui_balance: 20000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 20000000000000000
        exchange_rates:
          id: "0xab5be9ee6f40f4fc32abc68f4dd9b2f99bcffc318b8b6e1480e026f855443298"
          size: 1
        pending_stake: 0
        pending_total_sui_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0x32d04638c60436ac03753c99bd274a6c00d48120e794c6db84ece174c221d272"
          size: 0
      commission_rate: 200
      next_epoch_stake: 20000000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0x3834241ea900c04b1e6c7cada4a690bab5b01bac043f60a95d78e9f7c8b91dc5"
        size: 0
  pending_active_validators:
    contents:
      id: "0xa3ff90e96d759d8b38d6e6693ba3ceca8bf2456767bd4bfcb69bb9c2541d456e"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xbe983cf26bae9138770fa7fae708c12235bddb70d4b102e47361cc31e86156c2"
    size: 1
  inactive_validators:
    id: "0x446c5b9c83425b8c5428cfbc714ce833459b0266736ccc7baf06765b58bb6ef9"
    size: 0
  validator_candidates:
    id: "0x73da5136968c5d308e383e33400379ea77aaa633a58fae4a90a1ab9a8f4c744f"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0xd168b89f714b7591d690ff0205591aa06ec88f74b2c2ec4c5e7fb5539b8637f1"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 30000000000000000
  validator_low_stake_threshold: 20000000000000000
  validator_very_low_stake_threshold: 15000000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0xf09da3746750a39c495f30221629f2208906b33f803262f71d6b928e745f6dd4"
    size: 0
reference_gas_price: 1000
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 9230000000000000000
  distribution_counter: 0
  current_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 10
  stake_subsidy_decrease_rate: 1000
  extra_fields:
    id:
      id: "0x973e200eac8a96b38b27c50c98cc6d25cf0755ae177ba8d19195ceae03b53bc3"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0x9d9271df69650e03eac71bbc3d102045c18021bbcbbe27c8c0158cd96a84dffa"
  size: 0
